* New shortcodes: google_map_api, tags, hr, content_box, extra_wrap * New TinyMCE style formats: text-highlight, dropcap, label, well, small * Minor bug fixes
git-svn-id: https://plugins.svn.wordpress.org/motopress-cherryframework/trunk@964530 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/motopress-cherryframework-style.css
+++ b/motopress-cherryframework-style.css
@@ -6,3 +6,7 @@ div[data-motopress-loop-file="loop/loop-page.php"]:after,
 div[data-motopress-loop-file="loop/loop-page.php"]:before {
     display: none;
 }
+
+#motopress-content-editor-leftbar .popover.clickover, #motopress-content-editor-leftbar:hover .popover.clickover {
+    max-width: none;
+}
